--- a/Pages/Product/Components/ProductCard.razor
+++ b/Pages/Product/Components/ProductCard.razor
@@ -62,6 +62,7 @@
 
 
     <!-- #endregion -->
+
     <!-- #region Controls -->
     @*todo: Evaluation *@
     @*<div class="form-group m-1 row">
@@ -75,11 +76,12 @@
       </div>
     *@
     <!-- #endregion -->
+
   </div>
 </div>
 
 
-@*@switch (Status)
+@switch (Status)
 {
   case "":
     break;
@@ -128,4 +130,4 @@
     </div>
 
     break;
-}*@
+}
