--- a/Pages/_Imports.razor
+++ b/Pages/_Imports.razor
@@ -1,5 +1,4 @@
 ﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,8 +6,10 @@
 @using Microsoft.AspNetCore.Components
 @using Microsoft.AspNetCore.Razor
 @using Microsoft.JSInterop
-@using LojaVirtual;
-@using System.IO;
-@using BlazorInputFile;
-
-
+@using LojaVirtual
+@using System.IO
+@using BlazorInputFile
+@using MecaDevRazorComponents
+@using MecaDevRazorComponents.Carousel
+@using MecaDevRazorComponents.Modal
+@using MecaDevRazorComponents.TabControl  
